// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NimenhuutoEvents renders with erroneous http response for csv data fetch 1`] = `
<NimenhuutoEvents
  sources={
    Array [
      Object {
        "label": "Foo",
        "url": "foo",
      },
      Object {
        "label": "Bar",
        "url": "bar",
      },
    ]
  }
>
  <div
    className="root"
  >
    <div
      className="tab active"
      key="foo"
    >
      <NimenhuutoEventsTab
        error={true}
        items={Array []}
        label="Foo"
        loading={false}
      >
        <div
          className="error"
        >
          Lataaminen epäonnistui!
        </div>
      </NimenhuutoEventsTab>
    </div>
    <div
      className="tab inactive"
      key="bar"
    >
      <NimenhuutoEventsTab
        error={true}
        items={Array []}
        label="Bar"
        loading={false}
      >
        <div
          className="error"
        >
          Lataaminen epäonnistui!
        </div>
      </NimenhuutoEventsTab>
    </div>
  </div>
</NimenhuutoEvents>
`;

exports[`NimenhuutoEvents renders with invalid csv data 1`] = `
<NimenhuutoEvents
  sources={
    Array [
      Object {
        "label": "Foo",
        "url": "foo",
      },
      Object {
        "label": "Bar",
        "url": "bar",
      },
    ]
  }
>
  <div
    className="root"
  >
    <div
      className="tab active"
      key="foo"
    >
      <NimenhuutoEventsTab
        error={false}
        items={Array []}
        label="Foo"
        loading={false}
      >
        <div
          className="empty"
        >
          Ei tulevia tapahtumia.
        </div>
      </NimenhuutoEventsTab>
    </div>
    <div
      className="tab inactive"
      key="bar"
    >
      <NimenhuutoEventsTab
        error={false}
        items={Array []}
        label="Bar"
        loading={false}
      >
        <div
          className="empty"
        >
          Ei tulevia tapahtumia.
        </div>
      </NimenhuutoEventsTab>
    </div>
  </div>
</NimenhuutoEvents>
`;

exports[`NimenhuutoEvents renders with valid sources 1`] = `
<NimenhuutoEvents
  sources={
    Array [
      Object {
        "label": "Foo",
        "url": "foo",
      },
      Object {
        "label": "Bar",
        "url": "bar",
      },
    ]
  }
>
  <div
    className="root"
  >
    <div
      className="tab active"
      key="foo"
    >
      <NimenhuutoEventsTab
        error={false}
        items={
          Array [
            Object {
              "date": 2018-03-23T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547347",
            },
            Object {
              "date": 2018-03-25T00:00:00.000Z,
              "description": "  
Ulkotreenit Pirkkolan tekiksellä. 1 h, puoli kenttää (täysi jos on vapaata).",
              "location": "Pirkkola TN, Pirkkolan urheilupuisto, Helsinki",
              "subject": "Kullervo: Treenit",
              "time": "20:00",
              "url": "https://kullervo.nimenhuuto.com/events/10469058",
            },
            Object {
              "date": 2018-04-06T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547349",
            },
            Object {
              "date": 2018-04-13T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547350",
            },
            Object {
              "date": 2018-04-20T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547351",
            },
            Object {
              "date": 2018-04-27T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547352",
            },
            Object {
              "date": 2018-04-28T00:00:00.000Z,
              "description": "  
Perinteinen Herrasmiesturnaus 7v7, 
4 peliä ja 25 min/peli, 
13 ensimmäistä mukaan ja loput varalle.",
              "location": "Väinämöinen TN, Väinämöisenkatu 13 00100 Helsinki",
              "subject": "Kullervo: Herrasmiesturnaus Ikiksille",
              "time": "15:30",
              "url": "https://kullervo.nimenhuuto.com/events/10693998",
            },
          ]
        }
        label="Foo"
        loading={false}
      >
        <div
          className="root"
        >
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547347"
            key="Kullervo: karvapalloa varttuneilleFri Mar 23 2018 02:00:00 GMT+0200 (EET)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-03-23T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  23.03
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10469058"
            key="Kullervo: TreenitSun Mar 25 2018 02:00:00 GMT+0200 (EET)20:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-03-25T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  su
                </div>
                <div
                  className="date"
                >
                  25.03
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                Treenit
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  20:00
                </span>
                <span
                  className="location"
                >
                  Pirkkola TN, Pirkkolan urheilupuisto, Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547349"
            key="Kullervo: karvapalloa varttuneilleFri Apr 06 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-06T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  06.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547350"
            key="Kullervo: karvapalloa varttuneilleFri Apr 13 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-13T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  13.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547351"
            key="Kullervo: karvapalloa varttuneilleFri Apr 20 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-20T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  20.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547352"
            key="Kullervo: karvapalloa varttuneilleFri Apr 27 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-27T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  27.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10693998"
            key="Kullervo: Herrasmiesturnaus IkiksilleSat Apr 28 2018 03:00:00 GMT+0300 (EEST)15:30"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-28T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  la
                </div>
                <div
                  className="date"
                >
                  28.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                Herrasmiesturnaus Ikiksille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  15:30
                </span>
                <span
                  className="location"
                >
                  Väinämöinen TN, Väinämöisenkatu 13 00100 Helsinki
                </span>
              </div>
            </div>
          </a>
        </div>
      </NimenhuutoEventsTab>
    </div>
    <div
      className="tab inactive"
      key="bar"
    >
      <NimenhuutoEventsTab
        error={false}
        items={
          Array [
            Object {
              "date": 2018-03-23T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547347",
            },
            Object {
              "date": 2018-03-25T00:00:00.000Z,
              "description": "  
Ulkotreenit Pirkkolan tekiksellä. 1 h, puoli kenttää (täysi jos on vapaata).",
              "location": "Pirkkola TN, Pirkkolan urheilupuisto, Helsinki",
              "subject": "Kullervo: Treenit",
              "time": "20:00",
              "url": "https://kullervo.nimenhuuto.com/events/10469058",
            },
            Object {
              "date": 2018-04-06T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547349",
            },
            Object {
              "date": 2018-04-13T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547350",
            },
            Object {
              "date": 2018-04-20T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547351",
            },
            Object {
              "date": 2018-04-27T00:00:00.000Z,
              "description": null,
              "location": "Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki",
              "subject": "Kullervo: karvapalloa varttuneille",
              "time": "19:00",
              "url": "https://kullervo.nimenhuuto.com/events/10547352",
            },
            Object {
              "date": 2018-04-28T00:00:00.000Z,
              "description": "  
Perinteinen Herrasmiesturnaus 7v7, 
4 peliä ja 25 min/peli, 
13 ensimmäistä mukaan ja loput varalle.",
              "location": "Väinämöinen TN, Väinämöisenkatu 13 00100 Helsinki",
              "subject": "Kullervo: Herrasmiesturnaus Ikiksille",
              "time": "15:30",
              "url": "https://kullervo.nimenhuuto.com/events/10693998",
            },
          ]
        }
        label="Bar"
        loading={false}
      >
        <div
          className="root"
        >
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547347"
            key="Kullervo: karvapalloa varttuneilleFri Mar 23 2018 02:00:00 GMT+0200 (EET)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-03-23T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  23.03
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10469058"
            key="Kullervo: TreenitSun Mar 25 2018 02:00:00 GMT+0200 (EET)20:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-03-25T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  su
                </div>
                <div
                  className="date"
                >
                  25.03
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                Treenit
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  20:00
                </span>
                <span
                  className="location"
                >
                  Pirkkola TN, Pirkkolan urheilupuisto, Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547349"
            key="Kullervo: karvapalloa varttuneilleFri Apr 06 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-06T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  06.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547350"
            key="Kullervo: karvapalloa varttuneilleFri Apr 13 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-13T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  13.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547351"
            key="Kullervo: karvapalloa varttuneilleFri Apr 20 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-20T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  20.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10547352"
            key="Kullervo: karvapalloa varttuneilleFri Apr 27 2018 03:00:00 GMT+0300 (EEST)19:00"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-27T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  pe
                </div>
                <div
                  className="date"
                >
                  27.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                karvapalloa varttuneille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  19:00
                </span>
                <span
                  className="location"
                >
                  Helsingin Ranskalais-Suomalainen Koulu, Raumantie 4, 00350 Helsinki
                </span>
              </div>
            </div>
          </a>
          <a
            className="event-row row"
            href="https://kullervo.nimenhuuto.com/events/10693998"
            key="Kullervo: Herrasmiesturnaus IkiksilleSat Apr 28 2018 03:00:00 GMT+0300 (EEST)15:30"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DateBadge
              dateStr={2018-04-28T00:00:00.000Z}
            >
              <div
                className="day"
              >
                <div
                  className="weekday"
                >
                  la
                </div>
                <div
                  className="date"
                >
                  28.04
                </div>
              </div>
            </DateBadge>
            <div
              className="info"
            >
              <div
                className="subject"
              >
                Herrasmiesturnaus Ikiksille
              </div>
              <div
                className="details"
              >
                <span
                  className="time"
                >
                  Klo 
                  15:30
                </span>
                <span
                  className="location"
                >
                  Väinämöinen TN, Väinämöisenkatu 13 00100 Helsinki
                </span>
              </div>
            </div>
          </a>
        </div>
      </NimenhuutoEventsTab>
    </div>
  </div>
</NimenhuutoEvents>
`;
